<resources>
    <string name="app_name">Cinema Trip</string>
    <string name="edit">Edit</string>
    <string name="watch_again">Watch again</string>
    <string name="no_watch_again">Do not watch again</string>
    <string name="rating_input">Rating</string>
    <string name="navigation_menu_add_movie">Add movie</string>
    <string name="filter_navigation_menu_category">Filters</string>
    <string name="filter_increase">Min to Max</string>
    <string name="filter_decrease">Max to Min</string>
    <string name="filter_a_z">A-Z</string>
    <string name="filter_z_a">Z-A</string>
    <string name="filter_watch_again">Watch again</string>
    <string name="navigation_menu_setting">Setting</string>
    <string name="nav_search">Search</string>
    <string name="context_change">Change</string>
    <string name="context_delete">Delete</string>
    <string name="hallo">Привет!</string>
    <string name="buttomTopMovies">Топ фильмов</string>
    <string name="buttomNewFilm">Добавить фильм</string>
    <string name="textMotivationNameMovie">Напишите название фильма</string>
    <string name="nameMovie">Название фильма</string>
    <string name="setParameters">Ввести параметры</string>
    <string name="saveNotSave">Не сохранять</string>
    <string name="back">Назад</string>
    <string name="setParametersFrom1To10">Выберите значение параметров от 1 до 10</string>
    <string name="humor">Юмор</string>
    <string name="music">Музыка</string>
    <string name="dynamic">Динамика</string>
    <string name="image">Картинка</string>
    <string name="dialogs">Диалоги</string>
    <string name="heroes">Герои</string>
    <string name="antiheroes">Злодеи</string>
    <string name="story">Сюжет</string>
    <string name="drama">Драма</string>
    <string name="watchAgain">Посмотрю снова</string>
    <string name="saveAll">Сохранить все</string>
    <string name="toolbar_search">Search</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="rating_card_movie">Райтинг: %1$d</string>
    <string name="dialog_start_delete">Вы уверены, что хотите удалить фильм?</string>
    <string name="dialog_start_delete_all">Вы уверены, что хотите удалить все данные?\nВосстановление невозможно!</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="text_share_message">Посмотрел недавно фильм</string>
    <string name="search">Search</string>
    <string name="search_hint">Поиск фильмов по названию</string>
    <string name="unsuccessful_search">Фильм с таким названием не найден</string>
    <string name="path_source">/databases/</string>
</resources>